grammar/FuncTestCaseParser.g4
parser grammar FuncTestCaseParser;

options {
    caseInsensitive = true;
    tokenVocab=FuncTestCaseLexer;
}

doc
    : header testGroup+ EOF
    ;

header
    : version include dependency*
    ;

version
    : TripleHash (SubstraitScalarTest | SubstraitAggregateTest | SubstraitWindowTest) Colon FormatVersion
    ;

include
    : TripleHash SubstraitInclude Colon ExtensionUrn
    ;

dependency
    : TripleHash SubstraitDependency Colon ExtensionUrn
    ;

testGroupDescription
    : DescriptionLine
    ;

testCase
    : functionName=identifier OParen arguments CParen ( OBracket funcOptions CBracket )? Eq result
    ;

testGroup
    : testGroupDescription? (testCase)+                          #scalarFuncTestGroup
    | testGroupDescription? (aggFuncTestCase)+                   #aggregateFuncTestGroup
    | testGroupDescription? (windowFuncTestCase)+                #windowFuncTestGroup
    ;

arguments
    : argument (Comma argument)*
    ;

result
    : argument
    | substraitError
    ;

argument
    : nullArg
    | enumArg
    | intArg
    | floatArg
    | booleanArg
    | stringArg
    | decimalArg
    | dateArg
    | intervalYearArg
    | intervalDayArg
    | intervalCompoundArg
    | fixedCharArg
    | varCharArg
    | fixedBinaryArg
    | precisionTimeArg
    | precisionTimestampArg
    | precisionTimestampTZArg
    | listArg
    | structArg
    | mapArg
    | userDefinedArg
    | lambdaArg
    | funcCallArg
    | Identifier  // Bare identifiers (for lambda parameters)
    ;

aggFuncTestCase
    : aggFuncCall ( OBracket funcOptions CBracket )? Eq result
    ;

aggFuncCall
    : tableData funcName=identifier OParen qualifiedAggregateFuncArgs? CParen           #multiArgAggregateFuncCall
    | tableRows functName=identifier OParen aggregateFuncArgs? CParen                   #compactAggregateFuncCall
    | functName=identifier OParen dataColumn CParen                                     #singleArgAggregateFuncCall
    ;

windowFuncTestCase
    : windowFuncCall ( OBracket funcOptions CBracket )? Eq windowResult
    ;

windowFuncCall
    : tableData funcName=identifier OParen windowFuncArgs? CParen Over frameRef=Identifier
    ;

windowResult
    : dataColumn
    | substraitError
    ;

tableData
    : Define tableName=Identifier OParen dataType (Comma dataType)* CParen Eq tableRows
    ;

tableRows
    : OParen (columnValues (Comma columnValues)*)? CParen
    ;

dataColumn
    : columnValues DoubleColon dataType
    ;

columnValues
    : OParen (literal (Comma literal)*)? CParen
    ;

literal
    : NullLiteral
    | numericLiteral
    | BooleanLiteral
    | StringLiteral
    | DateLiteral
    | TimeLiteral
    | TimestampLiteral
    | TimestampTzLiteral
    | IntervalYearLiteral
    | IntervalDayLiteral
    | IntervalCompoundLiteral
    ;

qualifiedAggregateFuncArgs
    : qualifiedAggregateFuncArg (Comma qualifiedAggregateFuncArg)*
    ;

aggregateFuncArgs
    : aggregateFuncArg (Comma aggregateFuncArg)*
    ;

qualifiedAggregateFuncArg
    : tableName=Identifier Dot ColumnName
    | argument
    ;

aggregateFuncArg
    : ColumnName DoubleColon dataType
    | argument
    ;

windowFuncArgs
    : windowFuncArg (Comma windowFuncArg)*
    ;

windowFuncArg
    : ColumnName
    | argument
    ;

numericLiteral
    : DecimalLiteral | IntegerLiteral | floatLiteral
    ;

floatLiteral
    : FloatLiteral | NaN
    ;

nullArg: NullLiteral DoubleColon dataType;

intArg: IntegerLiteral DoubleColon intType;

floatArg: numericLiteral DoubleColon floatType;

decimalArg
    : numericLiteral DoubleColon decimalType
    ;

booleanArg
    : BooleanLiteral DoubleColon booleanType
    ;

stringArg
    : StringLiteral DoubleColon stringType
    ;

dateArg
    : DateLiteral DoubleColon dateType
    ;

intervalYearArg
    : IntervalYearLiteral DoubleColon intervalYearType
    ;

intervalDayArg
    : IntervalDayLiteral DoubleColon intervalDayType
    ;

intervalCompoundArg
    : IntervalCompoundLiteral DoubleColon intervalCompoundType
    ;

fixedCharArg
    : StringLiteral DoubleColon fixedCharType
    ;

varCharArg
    : StringLiteral DoubleColon varCharType
    ;

fixedBinaryArg
    : StringLiteral DoubleColon fixedBinaryType
    ;

precisionTimeArg
    : TimeLiteral DoubleColon precisionTimeType
    ;

precisionTimestampArg
    : TimestampLiteral DoubleColon precisionTimestampType
    ;

precisionTimestampTZArg
    : TimestampTzLiteral DoubleColon precisionTimestampTZType
    ;

listArg
    : literalList DoubleColon listType
    ;

structArg
    : literalStruct DoubleColon structType
    ;

mapArg
    : literalMap DoubleColon mapType
    ;

userDefinedArg
    : literalStruct DoubleColon userDefinedType
    ;

lambdaArg
    : literalLambda DoubleColon funcType
    ;

funcCallArg
    : identifier OParen arguments CParen
    ;

enumArg
    : Identifier DoubleColon EnumType
    ;

literalList
    : OBracket (compoundLiteral (Comma compoundLiteral)*)? CBracket
    ;

literalStruct
    : OParen (compoundLiteral (Comma compoundLiteral)*)? CParen
    ;

literalMap
    : OBrace (mapEntry (Comma mapEntry)*)? CBrace
    ;

mapEntry
    : key=compoundLiteral Colon value=compoundLiteral
    ;

compoundLiteral
    : literal
    | literalList
    | literalStruct
    | literalMap
    ;

literalLambda
    : OParen lambdaParameters Arrow lambdaBody CParen
    ;

lambdaParameters
    : Identifier                                    # singleParam
    | OParen Identifier (Comma Identifier)+ CParen  # tupleParams
    ;

lambdaBody
    : identifier OParen arguments CParen
    ; // For now, we only allow lambda bodies of the form func_name(arg1,arg2,...)

dataType
    : scalarType
    | parameterizedType
    ;

scalarType
  : booleanType                          #boolean
  | intType                              #int
  | floatType                            #float
  | stringType                           #string
  | binaryType                           #binary
  | dateType                             #date
  | intervalYearType                     #intervalYear
  | UUID isnull=QMark?                   #uuid
  | userDefinedType                      #userDefined
  ;

userDefinedType
    : UserDefined Identifier isnull=QMark?
    ;

booleanType
    : (Bool | Boolean) isnull=QMark?
    ;

stringType
    : (Str | String) isnull=QMark?
    ;

binaryType
    : (Binary | VBin) isnull=QMark?
    ;

intType
    : (I8 | I16 | I32 | I64) isnull=QMark?
    ;

floatType
    : (FP32 | FP64) isnull=QMark?
    ;

dateType
    : Date isnull=QMark?
    ;

intervalYearType
    : (IYear | Interval_Year) isnull=QMark?
    ;

intervalDayType
    : (IDay | Interval_Day) isnull=QMark? (OAngleBracket len=numericParameter CAngleBracket)?
    ;

intervalCompoundType
    : (ICompound | Interval_Compound) isnull=QMark? (OAngleBracket len=numericParameter CAngleBracket)?
    ;

fixedCharType
    : (FChar | FixedChar) isnull=QMark? OAngleBracket len=numericParameter CAngleBracket
    ;

varCharType
    : (VChar | VarChar) isnull=QMark? OAngleBracket len=numericParameter CAngleBracket
    ;

fixedBinaryType
    : (FBin | FixedBinary) isnull=QMark? OAngleBracket len=numericParameter CAngleBracket
    ;

decimalType
    : (Dec | Decimal) isnull=QMark?
        (OAngleBracket precision=numericParameter Comma scale=numericParameter CAngleBracket)?
    ;

precisionTimeType
    : (PT | Precision_Time) isnull=QMark? OAngleBracket precision=numericParameter CAngleBracket
    ;

precisionTimestampType
    : (PTs | Precision_Timestamp) isnull=QMark? OAngleBracket precision=numericParameter CAngleBracket
    ;

precisionTimestampTZType
    : (PTsTZ | Precision_Timestamp_TZ) isnull=QMark? OAngleBracket precision=numericParameter CAngleBracket
    ;

listType
    : List isnull=QMark? OAngleBracket elemType=dataType CAngleBracket #list
    ;

structType
    : Struct isnull=QMark? OAngleBracket (dataType (Comma dataType)*)? CAngleBracket
    ;

mapType
    : Map isnull=QMark? OAngleBracket keyType=dataType Comma valueType=dataType CAngleBracket
    ;

funcType
    : Func isnull=QMark? OAngleBracket params=funcParameters Arrow returnType=dataType CAngleBracket
    ;

funcParameters
    : dataType                                  #singleFuncParam
    | OParen dataType (Comma dataType)* CParen  #funcParamsWithParens
    ;

parameterizedType
    : fixedCharType
    | varCharType
    | fixedBinaryType
    | decimalType
    | intervalDayType
    | intervalCompoundType
    | precisionTimeType
    | precisionTimestampType
    | precisionTimestampTZType
    | listType
    | structType
    | mapType
    | funcType
// TODO implement the rest of the parameterized types
//  | NStruct isnull='?'? Lt Identifier expr (Comma Identifier expr)* Gt #nStruct
  ;

numericParameter
  : IntegerLiteral #integerLiteral
  ;

substraitError
    : ErrorResult | UndefineResult
    ;

funcOption
    : optionName Colon optionValue
    ;

optionName
    : Overflow | Rounding | NullHandling | SpacesOnly
    | Identifier
    ;

optionValue
    : Error | Saturate | Silent | TieToEven | NaN | Truncate | AcceptNulls | IgnoreNulls
    | BooleanLiteral
    | NullLiteral
    | Identifier
    ;

funcOptions
    : funcOption (Comma funcOption)*
    ;

nonReserved //  IMPORTANT: this rule must only contain tokens
    : And | Or | Truncate
    ;

identifier
    : nonReserved
    | Identifier
    ;
