tests/coverage/antlr_parser/FuncTestCaseParser.py
# SPDX-License-Identifier: Apache-2.0
# Generated from FuncTestCaseParser.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class FuncTestCaseParser ( Parser ):

    grammarFileName = "FuncTestCaseParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "'###'", "'SUBSTRAIT_SCALAR_TEST'", 
                     "'SUBSTRAIT_AGGREGATE_TEST'", "'SUBSTRAIT_INCLUDE'", 
                     "'SUBSTRAIT_DEPENDENCY'", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'DEFINE'", "'<!ERROR>'", "'<!UNDEFINED>'", 
                     "'OVERFLOW'", "'ROUNDING'", "'ERROR'", "'SATURATE'", 
                     "'SILENT'", "'TIE_TO_EVEN'", "'NAN'", "'ACCEPT_NULLS'", 
                     "'IGNORE_NULLS'", "'NULL_HANDLING'", "'SPACES_ONLY'", 
                     "'TRUNCATE'", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'P'", "'T'", "'Y'", "'M'", "'D'", "'H'", 
                     "'S'", "'F'", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'null'", "<INVALID>", "'enum'", 
                     "'{'", "'}'", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'IF'", "'THEN'", "'ELSE'", "'FUNC'", "'BOOLEAN'", 
                     "'I8'", "'I16'", "'I32'", "'I64'", "'FP32'", "'FP64'", 
                     "'STRING'", "'BINARY'", "'DATE'", "'INTERVAL_YEAR'", 
                     "'INTERVAL_DAY'", "'INTERVAL_COMPOUND'", "'UUID'", 
                     "'NULL'", "'DECIMAL'", "'PRECISION_TIME'", "'PRECISION_TIMESTAMP'", 
                     "'PRECISION_TIMESTAMP_TZ'", "'FIXEDCHAR'", "'VARCHAR'", 
                     "'FIXEDBINARY'", "'STRUCT'", "'NSTRUCT'", "'LIST'", 
                     "'MAP'", "'U!'", "'BOOL'", "'STR'", "'VBIN'", "'IYEAR'", 
                     "'IDAY'", "'ICOMPOUND'", "'DEC'", "'PT'", "'PTS'", 
                     "'PTSTZ'", "'FCHAR'", "'VCHAR'", "'FBIN'", "'ANY'", 
                     "<INVALID>", "'::'", "'+'", "'-'", "'*'", "'/'", "'%'", 
                     "'='", "'!='", "'>='", "'<='", "'>'", "'<'", "'!'", 
                     "'('", "')'", "'['", "']'", "','", "':'", "'?'", "'#'", 
                     "'.'", "'AND'", "'OR'", "':='", "'->'" ]

    symbolicNames = [ "<INVALID>", "Whitespace", "TripleHash", "SubstraitScalarTest", 
                      "SubstraitAggregateTest", "SubstraitInclude", "SubstraitDependency", 
                      "ExtensionUrn", "FormatVersion", "DescriptionLine", 
                      "Define", "ErrorResult", "UndefineResult", "Overflow", 
                      "Rounding", "Error", "Saturate", "Silent", "TieToEven", 
                      "NaN", "AcceptNulls", "IgnoreNulls", "NullHandling", 
                      "SpacesOnly", "Truncate", "IntegerLiteral", "DecimalLiteral", 
                      "FloatLiteral", "BooleanLiteral", "TimestampTzLiteral", 
                      "TimestampLiteral", "TimeLiteral", "DateLiteral", 
                      "PeriodPrefix", "TimePrefix", "YearSuffix", "MSuffix", 
                      "DaySuffix", "HourSuffix", "SecondSuffix", "FractionalSecondSuffix", 
                      "OAngleBracket", "CAngleBracket", "IntervalYearLiteral", 
                      "IntervalDayLiteral", "IntervalCompoundLiteral", "NullLiteral", 
                      "StringLiteral", "EnumType", "OBrace", "CBrace", "ColumnName", 
                      "LineComment", "BlockComment", "If", "Then", "Else", 
                      "Func", "Boolean", "I8", "I16", "I32", "I64", "FP32", 
                      "FP64", "String", "Binary", "Date", "Interval_Year", 
                      "Interval_Day", "Interval_Compound", "UUID", "Null", 
                      "Decimal", "Precision_Time", "Precision_Timestamp", 
                      "Precision_Timestamp_TZ", "FixedChar", "VarChar", 
                      "FixedBinary", "Struct", "NStruct", "List", "Map", 
                      "UserDefined", "Bool", "Str", "VBin", "IYear", "IDay", 
                      "ICompound", "Dec", "PT", "PTs", "PTsTZ", "FChar", 
                      "VChar", "FBin", "Any", "AnyVar", "DoubleColon", "Plus", 
                      "Minus", "Asterisk", "ForwardSlash", "Percent", "Eq", 
                      "Ne", "Gte", "Lte", "Gt", "Lt", "Bang", "OParen", 
                      "CParen", "OBracket", "CBracket", "Comma", "Colon", 
                      "QMark", "Hash", "Dot", "And", "Or", "Assign", "Arrow", 
                      "Number", "Identifier", "Newline" ]

    RULE_doc = 0
    RULE_header = 1
    RULE_version = 2
    RULE_include = 3
    RULE_dependency = 4
    RULE_testGroupDescription = 5
    RULE_testCase = 6
    RULE_testGroup = 7
    RULE_arguments = 8
    RULE_result = 9
    RULE_argument = 10
    RULE_aggFuncTestCase = 11
    RULE_aggFuncCall = 12
    RULE_tableData = 13
    RULE_tableRows = 14
    RULE_dataColumn = 15
    RULE_columnValues = 16
    RULE_literal = 17
    RULE_qualifiedAggregateFuncArgs = 18
    RULE_aggregateFuncArgs = 19
    RULE_qualifiedAggregateFuncArg = 20
    RULE_aggregateFuncArg = 21
    RULE_numericLiteral = 22
    RULE_floatLiteral = 23
    RULE_nullArg = 24
    RULE_intArg = 25
    RULE_floatArg = 26
    RULE_decimalArg = 27
    RULE_booleanArg = 28
    RULE_stringArg = 29
    RULE_dateArg = 30
    RULE_intervalYearArg = 31
    RULE_intervalDayArg = 32
    RULE_intervalCompoundArg = 33
    RULE_fixedCharArg = 34
    RULE_varCharArg = 35
    RULE_fixedBinaryArg = 36
    RULE_precisionTimeArg = 37
    RULE_precisionTimestampArg = 38
    RULE_precisionTimestampTZArg = 39
    RULE_listArg = 40
    RULE_structArg = 41
    RULE_mapArg = 42
    RULE_userDefinedArg = 43
    RULE_lambdaArg = 44
    RULE_funcCallArg = 45
    RULE_enumArg = 46
    RULE_literalList = 47
    RULE_literalStruct = 48
    RULE_literalMap = 49
    RULE_mapEntry = 50
    RULE_compoundLiteral = 51
    RULE_literalLambda = 52
    RULE_lambdaParameters = 53
    RULE_lambdaBody = 54
    RULE_dataType = 55
    RULE_scalarType = 56
    RULE_userDefinedType = 57
    RULE_booleanType = 58
    RULE_stringType = 59
    RULE_binaryType = 60
    RULE_intType = 61
    RULE_floatType = 62
    RULE_dateType = 63
    RULE_intervalYearType = 64
    RULE_intervalDayType = 65
    RULE_intervalCompoundType = 66
    RULE_fixedCharType = 67
    RULE_varCharType = 68
    RULE_fixedBinaryType = 69
    RULE_decimalType = 70
    RULE_precisionTimeType = 71
    RULE_precisionTimestampType = 72
    RULE_precisionTimestampTZType = 73
    RULE_listType = 74
    RULE_structType = 75
    RULE_mapType = 76
    RULE_funcType = 77
    RULE_funcParameters = 78
    RULE_parameterizedType = 79
    RULE_numericParameter = 80
    RULE_substraitError = 81
    RULE_funcOption = 82
    RULE_optionName = 83
    RULE_optionValue = 84
    RULE_funcOptions = 85
    RULE_nonReserved = 86
    RULE_identifier = 87

    ruleNames =  [ "doc", "header", "version", "include", "dependency", 
                   "testGroupDescription", "testCase", "testGroup", "arguments", 
                   "result", "argument", "aggFuncTestCase", "aggFuncCall", 
                   "tableData", "tableRows", "dataColumn", "columnValues", 
                   "literal", "qualifiedAggregateFuncArgs", "aggregateFuncArgs", 
                   "qualifiedAggregateFuncArg", "aggregateFuncArg", "numericLiteral", 
                   "floatLiteral", "nullArg", "intArg", "floatArg", "decimalArg", 
                   "booleanArg", "stringArg", "dateArg", "intervalYearArg", 
                   "intervalDayArg", "intervalCompoundArg", "fixedCharArg", 
                   "varCharArg", "fixedBinaryArg", "precisionTimeArg", "precisionTimestampArg", 
                   "precisionTimestampTZArg", "listArg", "structArg", "mapArg", 
                   "userDefinedArg", "lambdaArg", "funcCallArg", "enumArg", 
                   "literalList", "literalStruct", "literalMap", "mapEntry", 
                   "compoundLiteral", "literalLambda", "lambdaParameters", 
                   "lambdaBody", "dataType", "scalarType", "userDefinedType", 
                   "booleanType", "stringType", "binaryType", "intType", 
                   "floatType", "dateType", "intervalYearType", "intervalDayType", 
                   "intervalCompoundType", "fixedCharType", "varCharType", 
                   "fixedBinaryType", "decimalType", "precisionTimeType", 
                   "precisionTimestampType", "precisionTimestampTZType", 
                   "listType", "structType", "mapType", "funcType", "funcParameters", 
                   "parameterizedType", "numericParameter", "substraitError", 
                   "funcOption", "optionName", "optionValue", "funcOptions", 
                   "nonReserved", "identifier" ]

    EOF = Token.EOF
    Whitespace=1
    TripleHash=2
    SubstraitScalarTest=3
    SubstraitAggregateTest=4
    SubstraitInclude=5
    SubstraitDependency=6
    ExtensionUrn=7
    FormatVersion=8
    DescriptionLine=9
    Define=10
    ErrorResult=11
    UndefineResult=12
    Overflow=13
    Rounding=14
    Error=15
    Saturate=16
    Silent=17
    TieToEven=18
    NaN=19
    AcceptNulls=20
    IgnoreNulls=21
    NullHandling=22
    SpacesOnly=23
    Truncate=24
    IntegerLiteral=25
    DecimalLiteral=26
    FloatLiteral=27
    BooleanLiteral=28
    TimestampTzLiteral=29
    TimestampLiteral=30
    TimeLiteral=31
    DateLiteral=32
    PeriodPrefix=33
    TimePrefix=34
    YearSuffix=35
    MSuffix=36
    DaySuffix=37
    HourSuffix=38
    SecondSuffix=39
    FractionalSecondSuffix=40
    OAngleBracket=41
    CAngleBracket=42
    IntervalYearLiteral=43
    IntervalDayLiteral=44
    IntervalCompoundLiteral=45
    NullLiteral=46
    StringLiteral=47
    EnumType=48
    OBrace=49
    CBrace=50
    ColumnName=51
    LineComment=52
    BlockComment=53
    If=54
    Then=55
    Else=56
    Func=57
    Boolean=58
    I8=59
    I16=60
    I32=61
    I64=62
    FP32=63
    FP64=64
    String=65
    Binary=66
    Date=67
    Interval_Year=68
    Interval_Day=69
    Interval_Compound=70
    UUID=71
    Null=72
    Decimal=73
    Precision_Time=74
    Precision_Timestamp=75
    Precision_Timestamp_TZ=76
    FixedChar=77
    VarChar=78
    FixedBinary=79
    Struct=80
    NStruct=81
    List=82
    Map=83
    UserDefined=84
    Bool=85
    Str=86
    VBin=87
    IYear=88
    IDay=89
    ICompound=90
    Dec=91
    PT=92
    PTs=93
    PTsTZ=94
    FChar=95
    VChar=96
    FBin=97
    Any=98
    AnyVar=99
    DoubleColon=100
    Plus=101
    Minus=102
    Asterisk=103
    ForwardSlash=104
    Percent=105
    Eq=106
    Ne=107
    Gte=108
    Lte=109
    Gt=110
    Lt=111
    Bang=112
    OParen=113
    CParen=114
    OBracket=115
    CBracket=116
    Comma=117
    Colon=118
    QMark=119
    Hash=120
    Dot=121
    And=122
    Or=123
    Assign=124
    Arrow=125
    Number=126
    Identifier=127
    Newline=128

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class DocContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def header(self):
            return self.getTypedRuleContext(FuncTestCaseParser.HeaderContext,0)


        def EOF(self):
            return self.getToken(FuncTestCaseParser.EOF, 0)

        def testGroup(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FuncTestCaseParser.TestGroupContext)
            else:
                return self.getTypedRuleContext(FuncTestCaseParser.TestGroupContext,i)


        def getRuleIndex(self):
            return FuncTestCaseParser.RULE_doc

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDoc" ):
                listener.enterDoc(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDoc" ):
                listener.exitDoc(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDoc" ):
                return visitor.visitDoc(self)
            else:
                return visitor.visitChildren(self)




    def doc(self):

        localctx = FuncTestCaseParser.DocContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_doc)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 176
            self.header()
            self.state = 178 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 177
                self.testGroup()
                self.state = 180 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 16778752) != 0) or ((((_la - 113)) & ~0x3f) == 0 and ((1 << (_la - 113)) & 17921) != 0)):
                    break

            self.state = 182
            self.match(FuncTestCaseParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class HeaderContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def version(self):
            return self.getTypedRuleContext(FuncTestCaseParser.VersionContext,0)


        def include(self):
            return self.getTypedRuleContext(FuncTestCaseParser.IncludeContext,0)


        def dependency(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FuncTestCaseParser.DependencyContext)
            else:
                return self.getTypedRuleContext(FuncTestCaseParser.DependencyContext,i)


        def getRuleIndex(self):
            return FuncTestCaseParser.RULE_header

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterHeader" ):
                listener.enterHeader(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitHeader" ):
                listener.exitHeader(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitHeader" ):
                return visitor.visitHeader(self)
            else:
                return visitor.visitChildren(self)




    def header(self):

        localctx = FuncTestCaseParser.HeaderContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_header)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 184
            self.version()
            self.state = 185
            self.include()
            self.state = 189
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==2:
                self.state = 186
                self.dependency()
                self.state = 191
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VersionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TripleHash(self):
            return self.getToken(FuncTestCaseParser.TripleHash, 0)

        def Colon(self):
            return self.getToken(FuncTestCaseParser.Colon, 0)

        def FormatVersion(self):
            return self.getToken(FuncTestCaseParser.FormatVersion, 0)

        def SubstraitScalarTest(self):
            return self.getToken(FuncTestCaseParser.SubstraitScalarTest, 0)

        def SubstraitAggregateTest(self):
            return self.getToken(FuncTestCaseParser.SubstraitAggregateTest, 0)

        def getRuleIndex(self):
            return FuncTestCaseParser.RULE_version

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVersion" ):
                listener.enterVersion(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVersion" ):
                listener.exitVersion(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVersion" ):
                return visitor.visitVersion(self)
            else:
                return visitor.visitChildren(self)




    def version(self):

        localctx = FuncTestCaseParser.VersionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_version)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 192
            self.match(FuncTestCaseParser.TripleHash)
            self.state = 193
            _la = self._input.LA(1)
            if not(_la==3 or _la==4):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 194
            self.match(FuncTestCaseParser.Colon)
            self.state = 195
            self.match(FuncTestCaseParser.FormatVersion)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IncludeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TripleHash(self):
            return self.getToken(FuncTestCaseParser.TripleHash, 0)

        def SubstraitInclude(self):
            return self.getToken(FuncTestCaseParser.SubstraitInclude, 0)

        def Colon(self):
            return self.getToken(FuncTestCaseParser.Colon, 0)

        def ExtensionUrn(self):
            return self.getToken(FuncTestCaseParser.ExtensionUrn, 0)

        def getRuleIndex(self):
            return FuncTestCaseParser.RULE_include

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInclude" ):
                listener.enterInclude(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInclude" ):
                listener.exitInclude(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInclude" ):
                return visitor.visitInclude(self)
            else:
                return visitor.visitChildren(self)




    def include(self):

        localctx = FuncTestCaseParser.IncludeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_include)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 197
            self.match(FuncTestCaseParser.TripleHash)
            self.state = 198
            self.match(FuncTestCaseParser.SubstraitInclude)
            self.state = 199
            self.match(FuncTestCaseParser.Colon)
            self.state = 200
            self.match(FuncTestCaseParser.ExtensionUrn)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DependencyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TripleHash(self):
            return self.getToken(FuncTestCaseParser.TripleHash, 0)

        def SubstraitDependency(self):
            return self.getToken(FuncTestCaseParser.SubstraitDependency, 0)

        def Colon(self):
            return self.getToken(FuncTestCaseParser.Colon, 0)

        def ExtensionUrn(self):
            return self.getToken(FuncTestCaseParser.ExtensionUrn, 0)

        def getRuleIndex(self):
            return FuncTestCaseParser.RULE_dependency

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDependency" ):
                listener.enterDependency(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDependency" ):
                listener.exitDependency(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDependency" ):
                return visitor.visitDependency(self)
            else:
                return visitor.visitChildren(self)




    def dependency(self):

        localctx = FuncTestCaseParser.DependencyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_dependency)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 202
            self.match(FuncTestCaseParser.TripleHash)
            self.state = 203
            self.match(FuncTestCaseParser.SubstraitDependency)
            self.state = 204
            self.match(FuncTestCaseParser.Colon)
            self.state = 205
            self.match(FuncTestCaseParser.ExtensionUrn)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TestGroupDescriptionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DescriptionLine(self):
            return self.getToken(FuncTestCaseParser.DescriptionLine, 0)

        def getRuleIndex(self):
            return FuncTestCaseParser.RULE_testGroupDescription

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTestGroupDescription" ):
                listener.enterTestGroupDescription(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTestGroupDescription" ):
                listener.exitTestGroupDescription(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTestGroupDescription" ):
                return visitor.visitTestGroupDescription(self)
            else:
                return visitor.visitChildren(self)




    def testGroupDescription(self):

        localctx = FuncTestCaseParser.TestGroupDescriptionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_testGroupDescription)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 207
            self.match(FuncTestCaseParser.DescriptionLine)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TestCaseContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.functionName = None # IdentifierContext

        def OParen(self):
            return self.getToken(FuncTestCaseParser.OParen, 0)
